feat(npm): add npm package deployment setup
Add initial npm package configuration including package.json, installation scripts, and GitHub workflows for automated releases. Includes support for cross-platform binary distribution via npm with automatic platform detection.

Add documentation for npm deployment process and user installation instructions. Set up CI/CD pipelines for testing, building, and publishing to npm on tag pushes.

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,15 @@ __debug_bin
 # Release artifacts
 goreleaser/
 .goreleaser.dist.yaml
+.goreleaser.yml.bak
+
+# npm
+node_modules/
+npm/bin/
+npm/dist/
+npm/package-lock.json
+*.log
+npm-debug.log*
 
 # OS files
 Thumbs.db
