build: update gitignore and goreleaser config, add main.go
Update gitignore to properly ignore build artifacts and binaries
Update goreleaser config with new repository owner and name
Add main.go as the entry point for the qspin CLI tool

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -76,8 +76,8 @@ changelog:
 
 release:
   github:
-    owner: quickspin
-    name: quickspin-cli
+    owner: QuickSpin-Saas
+    name: quick-spin-cli
   draft: false
   prerelease: auto
   mode: append
