chore: rename npm package from @quickspin/cli to quickspin-cli
Update package name in package.json and related documentation in release workflow to reflect the new package name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
 
             Install via npm:
             ```bash
-            npm install -g @quickspin/cli
+            npm install -g quickspin-cli
             ```
 
             ### What's Changed
@@ -80,7 +80,7 @@ jobs:
 
             **npm (Recommended):**
             ```bash
-            npm install -g @quickspin/cli
+            npm install -g quickspin-cli
             ```
 
             **Direct Download:**
